<?xml version="1.0"?>
<package format="3">
  <name>tianracer_competition</name>
  <version>1.0.0</version>
  <description>The tianracer_competition package</description>
  <maintainer email="gengqianwu@todo.todo">gengqianwu</maintainer>
  <license>GPLv3</license>
  <depend>rclpy</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
