<?xml version="1.0"?>
<package format="3">
  <name>tianracer_navigation</name>
  <version>0.0.0</version>
  <description>The tianracer_navigation package</description>
  <maintainer email="tianbot@todo.todo">tianbot</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>move_base</depend> -->
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
